--- a/.github/workflows/contribute-list.yaml
+++ b/.github/workflows/contribute-list.yaml
@@ -12,4 +12,4 @@ jobs:
             - name: Contribute List
               uses: akhilmhdh/contributors-readme-action@v2.1.2
               env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  GITHUB_TOKEN: ${{ secrets.PAT_contribute_list }}
