--- a/.github/workflows/bi-directional-wiki-sync.yaml
+++ b/.github/workflows/bi-directional-wiki-sync.yaml
@@ -38,7 +38,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           token: ${{ secrets.NEWRELIC_BOT_TOKEN }} # allows us to push back to repo
-          ref: develop
+          ref: $default-branch
       - name: Sync Wiki to Docs
         uses: newrelic/wiki-sync-action@master
         with:
@@ -47,4 +47,4 @@ jobs:
           token: ${{ secrets.NEWRELIC_BOT_TOKEN }}
           gitAuthorName: ${{ env.GIT_AUTHOR_NAME }}
           gitAuthorEmail: ${{ env.GIT_AUTHOR_EMAIL }}
-          branch: develop # since default branch is develop in this example
+          branch: $default-branch # since default branch is develop in this example
