--- a/.github/workflows/bi-directional-wiki-sync.yaml
+++ b/.github/workflows/bi-directional-wiki-sync.yaml
@@ -37,8 +37,8 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v2
         with:
-          token: ${{ secrets.NEWRELIC_BOT_TOKEN }} # allows us to push back to repo
-          ref: $default-branch
+          token: ${{ secrets.NEWRELIC_BOT_TOKEN }}
+          ref: ${{ env.default_branch }}
       - name: Sync Wiki to Docs
         uses: newrelic/wiki-sync-action@master
         with:
@@ -47,4 +47,4 @@ jobs:
           token: ${{ secrets.NEWRELIC_BOT_TOKEN }}
           gitAuthorName: ${{ env.GIT_AUTHOR_NAME }}
           gitAuthorEmail: ${{ env.GIT_AUTHOR_EMAIL }}
-          branch: $default-branch # since default branch is develop in this example
+          branch: ${{ env.default_branch }}
