--- a/.github/workflows/bi-directional-wiki-sync.yaml
+++ b/.github/workflows/bi-directional-wiki-sync.yaml
@@ -11,8 +11,8 @@ on:
   gollum:
 
 env:
-  GIT_AUTHOR_NAME: Actionbot
-  GIT_AUTHOR_EMAIL: actions@github.com
+  GIT_AUTHOR_NAME: ${{ github.event.head_commit.author.name }}
+  GIT_AUTHOR_EMAIL: ${{ github.event.head_commit.author.email }}
 
 jobs:
   job-sync-docs-to-wiki:
