--- a/.github/workflows/bi-directional-wiki-sync.yaml
+++ b/.github/workflows/bi-directional-wiki-sync.yaml
@@ -11,8 +11,8 @@ on:
   gollum:
 
 env:
-  GIT_AUTHOR_NAME: ${{ github.event.head_commit.author.name }}
-  GIT_AUTHOR_EMAIL: ${{ github.event.head_commit.author.email }}
+  GIT_AUTHOR_NAME: ${{ github.actor }}
+  GIT_AUTHOR_EMAIL: ${{ github.actor }}@users.noreply.github.com
 
 jobs:
   job-sync-docs-to-wiki:
