--- a/.github/workflows/bi-directional-wiki-sync.yaml
+++ b/.github/workflows/bi-directional-wiki-sync.yaml
@@ -10,9 +10,11 @@ on:
     types: [docs]
   gollum:
 
-env:
-  GIT_AUTHOR_NAME: ${{ github.actor }}
-  GIT_AUTHOR_EMAIL: ${{ github.actor }}@users.noreply.github.com
+# env:
+#  The default GIT_AUTHOR_NAME is github.actor
+#  GIT_AUTHOR_NAME: Actionbot
+#  The default GIT_AUTHOR_NAME is github.actor@users.noreply.github.com
+#  GIT_AUTHOR_EMAIL: actions@github.com
 
 jobs:
   job-sync-docs-to-wiki:
@@ -48,3 +50,4 @@ jobs:
           gitAuthorName: ${{ env.GIT_AUTHOR_NAME }}
           gitAuthorEmail: ${{ env.GIT_AUTHOR_EMAIL }}
           branch: ${{ env.default_branch }}
+          commitMessage: Sync $SOURCE to $DESTINATION
