--- a/.github/workflows/bi-directional-wiki-sync.yaml
+++ b/.github/workflows/bi-directional-wiki-sync.yaml
@@ -10,11 +10,11 @@ on:
     types: [docs]
   gollum:
 
-# env:
+env:
 #  The default GIT_AUTHOR_NAME is github.actor
-#  GIT_AUTHOR_NAME: Actionbot
+  GIT_AUTHOR_NAME: ${{ github.actor }}
 #  The default GIT_AUTHOR_NAME is github.actor@users.noreply.github.com
-#  GIT_AUTHOR_EMAIL: actions@github.com
+  GIT_AUTHOR_EMAIL: ${{ github.actor }}@users.noreply.github.com
 
 jobs:
   job-sync-docs-to-wiki:
@@ -29,8 +29,8 @@ jobs:
           source: docs
           destination: wiki
           token: ${{ secrets.NEWRELIC_BOT_TOKEN }}
-          gitAuthorName: ${{ env.GIT_AUTHOR_NAME }}
-          gitAuthorEmail: ${{ env.GIT_AUTHOR_EMAIL }}
+#          gitAuthorName: ${{ env.GIT_AUTHOR_NAME }}
+#          gitAuthorEmail: ${{ env.GIT_AUTHOR_EMAIL }}
   
   job-sync-wiki-to-docs:
     runs-on: ubuntu-latest
@@ -47,7 +47,7 @@ jobs:
           source: wiki
           destination: docs
           token: ${{ secrets.NEWRELIC_BOT_TOKEN }}
-          gitAuthorName: ${{ env.GIT_AUTHOR_NAME }}
-          gitAuthorEmail: ${{ env.GIT_AUTHOR_EMAIL }}
+#          gitAuthorName: ${{ env.GIT_AUTHOR_NAME }}
+#          gitAuthorEmail: ${{ env.GIT_AUTHOR_EMAIL }}
           branch: ${{ env.default_branch }}
           commitMessage: Sync $SOURCE to $DESTINATION
